fix: blockGap

--- a/components/DefaultLayout.module.scss
+++ b/components/DefaultLayout.module.scss
@@ -29,8 +29,4 @@
   @media (max-width: 1200px) {
     row-gap: 2rem;
   }
-
-  @media (max-width: 768px) {
-    row-gap: 4rem;
-  }
 }
